<resources>
    <string name="app_name">SolarEdge Notifier</string>
    <string name="update">Update</string>
    <string name="name">Name</string>
    <string name="energy">Energy</string>
    <string name="output_levels">Output Levels</string>
    <string name="output_level_descr">Notifies you of low energy output of any SolarEdge installation.</string>
    <string name="outputbelowlevel">SolarEdge output too low!</string>
    <string name="energyoutput">%s had an energy output of %s yesterday.</string>
    <string name="outputlow_long">Your SolarEdge installation \'%s\' reached an energy output of only %s yesterday, which is lower than the threshold set of %s.</string>
    <string name="output">SolarEdge output</string>
    <string name="output_trend">Your SolarEdge installation \'%s\' reached an energy output of %s yesterday.</string>
    <string name="manage_api_keys">Manage API Keys</string>
    <string name="addapikey">Add API key</string>
    <string name="apikey">API key</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="manageapikeys">Manage API keys</string>
    <string name="delete">Delete</string>
    <string name="ph_apikey">ABCDEFGHIJKLMNOPQRST</string>
    <string name="deletekey">Delete this API key?</string>
    <string name="ays_deleteapikey">Are you sure you want to delete this API Key?\n\n%s</string>
    <string name="notifier">Notifier</string>
    <string name="disclaimer">Disclaimer: the creator of this app is not affiliated in any way by SolarEdge.</string>
    <string name="enable">Notifier enabled</string>
    <string name="contactsupplier">No API keys set! The notifier will not work correctly.</string>
    <string name="preftype">When to notify</string>
    <string name="whenbelowaverage">When below last week\'s daily average</string>
    <string name="whenbelowfixed">When below a certain value</string>
    <string name="daily">Daily</string>
    <string name="options">When to notify</string>
    <string name="threshold">Threshold (Wh)</string>
    <string name="apikeyinfo">Manage your API keys here. API keys can be obtained from the company that installed your PV system.</string>
    <string name="installname">Installation name</string>
    <string name="ph_installname">Some Example Solar</string>
    <string name="energyyesterday">Energy yesterday</string>
    <string name="avgenergylastweek">Average daily output last seven days</string>
    <string name="noapikeys">No API keys set</string>
    <plurals name="configured_n_keys">
        <item quantity="one">Configured %d key.</item>
        <item quantity="other">Configured %d keys.</item>
    </plurals>
    <plurals name="found_n_sites">
        <item quantity="one">Found %d site.</item>
        <item quantity="other">Found %d sites.</item>
    </plurals>
    <string name="lastcheck">Last check (tap to refresh)</string>
    <string name="ph_lastcheck">Success on Monday, June 15, 2009 1:45:30 PM</string>
    <string name="never">Never</string>
    <string name="success_at_s">Success at %s</string>
    <string name="fail_at_s_s">Fail at %s (%s)</string>
    <string name="sites">Sites</string>
    <string name="nosites">No sites found. Add an API key or refresh the existing ones.</string>
    <string name="d_sites">%d sites.</string>
    <string name="nositesfound">No sites found. Add a valid API key to install sites.</string>
    <string name="refresh">Refresh</string>
    <string name="ph_version">1.3.23</string>
    <string name="outputbelowavg">Energy below last week\'s average.</string>
    <string name="siteinfo">Site Info</string>
    <string name="ph_location">Somewhere, Someplace</string>
    <string name="loading">Loading…</string>
    <string name="unknownenergy">— kWh</string>
    <string name="emptyapi_key_id">API — / ID —</string>

</resources>
